--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
       <nav class="portfolio-naviagation">
         <a class="portfolio-link" href="#about">About me</a>
         <a class="portfolio-link" href="#stack">Stack</a>
-        <a class="portfolio-link" href="#projects">Projects</a>
+        <a class="portfolio-link" href="#cv">CV</a>
         <a class="portfolio-link" href="#contacts">Contacts</a>
+        <a class="portfolio-link" href="projects.html">Projects</a>
       </nav>
     </div>
   </header>
@@ -29,10 +30,11 @@
     <section id="about" class="about-me">
       <div class="about-description">
         <h1>Hello, my name is Dias Zakir</h1>
-        <h3>I'm a Go/Python Backend Developer</h3>
+        <h3>I'm a Go/Python Backend Developer | ML/DL Enthusiast</h3>
         <p>
           I'm interested about in creating scalable systems and applications
           using Python (FastAPI and Django) and Golang (net/http and Gin).
+          I'm also interested in Machine Learning and Deep Learning.
         </p>
       </div>
       <div class="about-photo">
@@ -98,53 +100,20 @@
         </div>
       </div>
     </section>
-    <!-- <section id="projects" class="about-projects">
-        <h2>Projects</h2>
-        <div class="project">
-          <div class="project-item">
-            <p>project image</p>
-            <h3>Project Name</h3>
-            <p>Project Description</p>
-            <a href="project-demo">Link</a>
-            <a href="project-repo">GitHub</a>
-          </div>
-          <div class="project-item">
-            <p>project image</p>
-            <h3>Project Name</h3>
-            <p>Project Description</p>
-            <a href="project-demo">Link</a>
-            <a href="project-repo">GitHub</a>
-          </div>
-          <div class="project-item">
-            <p>project image</p>
-            <h3>Project Name</h3>
-            <p>Project Description</p>
-            <a href="project-demo">Link</a>
-            <a href="project-repo">GitHub</a>
-          </div>
-          <div class="project-item">
-            <p>project image</p>
-            <h3>Project Name</h3>
-            <p>Project Description</p>
-            <a href="project-demo">Link</a>
-            <a href="project-repo">GitHub</a>
-          </div>
-          <div class="project-item">
-            <p>project image</p>
-            <h3>Project Name</h3>
-            <p>Project Description</p>
-            <a href="project-demo">Link</a>
-            <a href="project-repo">GitHub</a>
-          </div>
-          <div class="project-item">
-            <p>project image</p>
-            <h3>Project Name</h3>
-            <p>Project Description</p>
-            <a href="project-demo">Link</a>
-            <a href="project-repo">GitHub</a>
-          </div>
-        </div>
-      </section> -->
+    <section id="cv" class="about-cv">
+      <h2>Resume</h2>
+      <p class="cv-description">Download my resume in your preferred language</p>
+      <div class="cv-buttons">
+        <a href="https://drive.google.com/file/d/1Gjfx6Kr0DYb9MpkSXqyrnKmgEtHh3mSZ/view?usp=sharing" class="cv-button"
+          download>
+          <span>English CV</span>
+        </a>
+        <a href="https://drive.google.com/file/d/1I_4JCtsFBL2ELG3x8Kh3tbaLr10wL1QV/view?usp=sharing" class="cv-button"
+          download>
+          <span>Russian CV</span>
+        </a>
+      </div>
+    </section>
     <section id="contacts" class="about-contacts">
       <h2>Contacts</h2>
       <div class="contact">
@@ -177,7 +146,7 @@
       <nav>
         <a href="#about">About</a>
         <a href="#stack">Stack</a>
-        <a href="#projects">Projects</a>
+        <a href="#cv">CV</a>
         <a href="#contacts">Contact</a>
       </nav>
       <p>© 2026 Dias Zakir</p>
